[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/FluffText.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/SettingsUI.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.101961, 0.101961, 0.862745 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.635294, 0.635294, 0.627451, 1 )

[node name="SettingsUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.02
anchor_right = 0.98
anchor_bottom = 1.0
size_flags_stretch_ratio = 3.36
custom_constants/separation = 20

[node name="MusicVolumeH" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1228.0
margin_bottom = 39.0
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/MusicVolumeH"]
margin_right = 612.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"
valign = 1
autowrap = true

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/MusicVolumeH"]
margin_left = 616.0
margin_right = 1228.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXVolumeH" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 59.0
margin_right = 1228.0
margin_bottom = 98.0
size_flags_stretch_ratio = 3.36

[node name="Label" type="Label" parent="Panel/VBoxContainer/SFXVolumeH"]
margin_right = 612.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "SFX Volume"
valign = 1

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer/SFXVolumeH"]
margin_left = 616.0
margin_right = 1228.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 1228.0
margin_bottom = 122.0

[node name="Sensitivity" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
margin_top = 94.0
margin_right = 1228.0
margin_bottom = 133.0
size_flags_stretch_ratio = 3.36

[node name="Label" type="Label" parent="Panel/VBoxContainer/Sensitivity"]
margin_right = 612.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Mouse Sensitivity"
valign = 1

[node name="SensitivitySlider" type="HSlider" parent="Panel/VBoxContainer/Sensitivity"]
margin_left = 616.0
margin_right = 1228.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.33

[node name="InvertYAxis" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
margin_top = 94.0
margin_right = 1228.0
margin_bottom = 133.0
size_flags_stretch_ratio = 3.36

[node name="Label" type="Label" parent="Panel/VBoxContainer/InvertYAxis"]
margin_right = 612.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Invert Y-Axis"
valign = 1

[node name="InvertYButton" type="CheckBox" parent="Panel/VBoxContainer/InvertYAxis"]
unique_name_in_owner = true
margin_left = 616.0
margin_right = 1228.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BenchmarkContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
margin_top = 143.0
margin_right = 716.0
margin_bottom = 190.0

[node name="Metadata" type="TextEdit" parent="Panel/VBoxContainer/BenchmarkContainer"]
unique_name_in_owner = true
margin_right = 448.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "(benchmark metadata)"

[node name="SaveFPSButton" type="Button" parent="Panel/VBoxContainer/BenchmarkContainer"]
margin_left = 452.0
margin_right = 716.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
text = "save benchmark"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 142.0
margin_right = 1228.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.28

[node name="Sensitivity2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 305.0
margin_right = 1228.0
margin_bottom = 344.0
size_flags_stretch_ratio = 4.58

[node name="GraphicsLabel" type="Label" parent="Panel/VBoxContainer/Sensitivity2"]
margin_right = 612.0
margin_bottom = 39.0
hint_tooltip = "Can boost performance especially when playing in high-res window"
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Graphics (render resolution)"
valign = 1

[node name="GraphicsSlider" type="HSlider" parent="Panel/VBoxContainer/Sensitivity2"]
margin_left = 616.0
margin_right = 1228.0
margin_bottom = 39.0
hint_tooltip = "Can boost performance especially when playing in high-res window"
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/slider = SubResource( 2 )
max_value = 1.0
step = 0.25
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/Sensitivity2/GraphicsSlider"]
anchor_top = -0.384615
anchor_right = 0.0604575
anchor_bottom = -0.0256406
margin_right = 40.0
margin_bottom = 14.0
text = "Retro"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="Panel/VBoxContainer/Sensitivity2/GraphicsSlider"]
anchor_left = 0.410784
anchor_top = -0.358974
anchor_right = 0.541503
margin_right = 40.0
margin_bottom = 14.0
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Sensitivity2/GraphicsSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -13.0
margin_bottom = -13.0
text = "Max"
align = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 364.0
margin_right = 1228.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 481.0
margin_right = 1228.0
margin_bottom = 578.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19
custom_fonts/font = ExtResource( 1 )
text = "QUIT"

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 598.0
margin_right = 1228.0
margin_bottom = 602.0

[node name="DoneButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 622.0
margin_right = 1228.0
margin_bottom = 720.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19
custom_fonts/font = ExtResource( 1 )
text = "CONTINUE"

[connection signal="value_changed" from="Panel/VBoxContainer/MusicVolumeH/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFXVolumeH/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Sensitivity/SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/InvertYAxis/InvertYButton" to="." method="_on_InvertYButton_pressed"]
[connection signal="focus_entered" from="Panel/VBoxContainer/BenchmarkContainer/Metadata" to="." method="_on_Metadata_focus_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/BenchmarkContainer/SaveFPSButton" to="." method="_on_SaveFPSButton_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Sensitivity2/GraphicsSlider" to="." method="_on_GraphicsSlider_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
